--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		
+		<dependency>
+	<groupId>hsqldb</groupId>
+	<artifactId>hsqldb</artifactId>
+	<version>1.8.0.7</version>
+</dependency>
+            
 
 		<dependency>
 			<groupId>commons-dbcp</groupId>
