--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,8 @@
 
 	<repositories>
 		<repository>
-			<id>SmartCampus</id>
-			<url>http://repository.smartcampuslab.it/content/groups/public</url>
+			<id>SmartCommunity</id>
+			<url>http://repository.smartcommunitylab.it/content/groups/public</url>
 		</repository>
 		<repository>
 			<id>spring-milestone</id>
